--- a/DummeDataGenerators.WebInterface/_Imports.razor
+++ b/DummeDataGenerators.WebInterface/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using DummeDataGenerators.WebInterface
-@using DummeDataGenerators.WebInterface.Shared
+@using DummyDataGenerators.WebInterface
+@using DummyDataGenerators.WebInterface.Shared
+@using DummyDataGenerators.DTO.DummyCustomerDTO
+@using DummyDataGenerators.DTO.DummyErrorDTO 
