--- a/DummyDataGenerators.WebInterface/_Imports.razor
+++ b/DummyDataGenerators.WebInterface/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using DummyDataGenerators.WebInterface
 @using DummyDataGenerators.WebInterface.Shared
+@using DummyDataGenerators.WebInterface.Components
+@using DummyDataGenerators.DTO
+@using DummyDataGenerators.DTO.DummyErrorDTO
+@using DummyDataGenerators.DTO.DummyTransactionDTO
+@using DummyDataGenerators.DTO.DummyCustomerDTO
