--- a/DummyDataGenerators.WebInterface/_Imports.razor
+++ b/DummyDataGenerators.WebInterface/_Imports.razor
@@ -13,3 +13,4 @@
 @using DummyDataGenerators.DTO.DummyErrorDTO
 @using DummyDataGenerators.DTO.DummyTransactionDTO
 @using DummyDataGenerators.DTO.DummyCustomerDTO
+@using DummyDataGenerators.Common.Userobjects 
